--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,6 @@ body {
 header {
     text-align: center;
 }
-
 header nav {
     list-style: none;
     display: flex;
@@ -23,7 +22,6 @@ header nav {
 header nav li {
     color: #fff;
 }
-
 header nav li a:link {
     text-decoration: none;
     color: #fff
@@ -35,4 +33,8 @@ h1 {
     color: #007eb3;
     word-spacing: 10px;
     border-bottom: 1px dashed #007eb3;
+}
+
+.container {
+    border: 1px solid black;
 }
