--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,28 +5,6 @@
     line-height: 1.5;
     box-sizing: border-box;
 }
-
-body {
-    width: 100%;
-}
-
-header {
-    text-align: center;
-}
-header nav {
-    list-style: none;
-    display: flex;
-    justify-content: space-evenly;
-    background-color: #007eb3;
-}
-header nav li {
-    color: #fff;
-}
-header nav li a:link {
-    text-decoration: none;
-    color: #fff
-}
-
 h1 {
     font-size: 2.8125em;
     text-align: center;
@@ -34,7 +12,80 @@ h1 {
     word-spacing: 10px;
     border-bottom: 1px dashed #007eb3;
 }
+h2 {
+    font-size: 1.875em;;
+}
+h3 {
+    font-size: 1.5625em;
+    margin-bottom: 0;
+}
+body {
+    width: 100%;
+    margin: 0;
+}
+
+header {
+    text-align: center;
+}
+
+header nav {
+    list-style: none;
+    display: flex;
+    justify-content: space-evenly;
+    background-color: #007eb3;
+}
+
+header nav li {
+    color: #fff;
+}
+
+header nav li a:link {
+    text-decoration: none;
+    color: #fff
+}
+
+main {
+    max-width: 900px;
+    margin: auto;
+}
 
 .container {
-    border: 1px solid black;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    padding: 30px 0;
+    border-bottom: 1px solid #007db3;
+}
+
+.image {
+    display: flex;
+    max-width: 49%;
+}
+
+.description {
+    display: flex;
+    flex-direction: column;
+}
+
+.containerR {
+    flex-direction: row-reverse;
+}
+
+p {
+    margin-top: 0;
+}
+
+.description a:link {
+    background-color: #007eb3;
+    border-radius: 6px;
+    text-decoration: none;
+    color: #fff;
+    max-width:fit-content;
+    padding: 5px 15px;
+}
+.rouge {
+    color: #F00;
+}
+.ocre {
+    color:#CD8C56
 }
