--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,11 @@
     line-height: 1.5;
     box-sizing: border-box;
 }
+
+strong {
+    font-weight: 600;
+}
+
 h1 {
     font-size: 2.8125em;
     text-align: center;
@@ -12,13 +17,17 @@ h1 {
     word-spacing: 10px;
     border-bottom: 1px dashed #007eb3;
 }
+
 h2 {
-    font-size: 1.875em;;
+    font-size: 1.875em;
+    text-transform: uppercase;
 }
+
 h3 {
     font-size: 1.5625em;
     margin-bottom: 0;
 }
+
 body {
     width: 100%;
     margin: 0;
@@ -44,17 +53,18 @@ header nav li a:link {
     color: #fff
 }
 
-main {
+.container {
     max-width: 900px;
     margin: auto;
 }
 
-.container {
+.voyages {
     display: flex;
     width: 100%;
     justify-content: space-between;
     padding: 30px 0;
     border-bottom: 1px solid #007db3;
+    gap: 20px;
 }
 
 .image {
@@ -67,7 +77,7 @@ main {
     flex-direction: column;
 }
 
-.containerR {
+.voyagesR {
     flex-direction: row-reverse;
 }
 
@@ -88,4 +98,167 @@ p {
 }
 .ocre {
     color:#CD8C56
+}
+
+.saison {
+    border: 1px solid #ccc;
+    border-collapse: collapse;
+    width: 100%;
+    margin-bottom: 30px;
+}
+.saison th {
+    border: 1px solid #ccc;
+    font-weight: 600;
+    height: 50px;
+}
+.saison td {
+    border: 1px solid #ccc;
+    height: 50px;
+    padding-left: 15px;
+}
+
+.saison tbody tr:nth-child(odd) {
+    background-color: #ccccccb9;
+}
+
+.aPropos {
+    display: flex;
+    background-image: url(../img/fond.jpg);
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    height: 450px;
+    margin-bottom: 30px;
+}
+
+.infos {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 50%;
+    background-color: #fff;
+    height: 80%;
+    padding: 15px 15px 0 15px;
+}
+
+.meContacter {
+    display: flex;
+    flex-direction: column;
+}
+
+.meContacter a:link {
+    text-decoration: none;
+    color:#007eb3;
+}
+
+.adress::before {
+    font-family: FontAwesome;
+    content: "\f3c5";
+    padding-right: 5px;
+}
+.eMail::before {
+    font-family: FontAwesome;
+    content: "\f0e0";
+    padding-right: 5px;
+}
+.tel::before {
+    font-family: FontAwesome;
+    content: "\f095";
+    padding-right: 5px;
+}
+
+.formulaire {
+    display: flex;
+    background-image: url(../img/map-image.png);
+    background-color: #000;
+    background-position: center;
+    width: 100%;
+    height: 300px;
+    margin-bottom: 30px;
+}
+
+.formContent {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    border: none;
+    padding: 0;
+}
+
+.CoorMess {
+    display: flex;
+    width: 100%;
+    height: 250px;
+}
+
+.coordonnees {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 50%;
+    gap: 15px;
+    padding: 20px 0 0 20px;
+}
+.coordonnees div input {
+    width: 95%;
+    height: 40px;
+    border-radius: 6px;
+    padding-left: 10px;
+}
+
+.Message {
+    display: flex;
+    justify-content: center;
+    width: 50%;
+    padding: 20px 20px 0 0;
+}
+
+.Message textarea {
+    width: 100%;
+    border-radius: 6px;
+    padding: 10px 0 0 10px;
+}
+
+.envoi {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.bouton {
+    border-radius: 6px;
+    background-color: #007eb3;
+    color: #fff;
+    width: 100px;
+    height: 40px;
+}
+
+.reseaux p {margin: 0;}
+
+.reseaux i {
+    font-size: 2em;
+    padding-bottom: 20px;
+}
+.fa-square-facebook {color:#4267B2;}
+.fa-square-twitter {color: #1da1f2;}
+.fa-square-pinterest {color: #bd081c;}
+.fa-square-instagram {color: #8948c1;}
+
+footer{
+    background-color: #007db3;
+    height: 200px;
+    display: flex;
+    flex-direction: column ;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+}
+
+footer p {
+    color: #fff;
+}
+
+footer a:link {
+    color: #fff;
 }
