--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,6 +53,14 @@ header nav li a:link {
     text-decoration: none;
     color: #fff
 }
+header nav li a:hover {
+    text-decoration: none;
+    color: #fff
+}
+header nav li a:visited {
+    text-decoration: none;
+    color: #fff
+}
 
 .container {
     max-width: 900px;
