--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,9 +6,7 @@
     box-sizing: border-box;
 }
 
-strong {
-    font-weight: 600;
-}
+strong { font-weight: 600;}
 
 h1 {
     font-size: 2.8125em;
@@ -33,9 +31,7 @@ body {
     margin: 0;
 }
 
-header {
-    text-align: center;
-}
+header { text-align: center;}
 
 header nav {
     display: flex;
@@ -86,13 +82,9 @@ header nav li a:visited {
     flex-direction: column;
 }
 
-.voyagesR {
-    flex-direction: row-reverse;
-}
+.voyagesR { flex-direction: row-reverse;}
 
-p {
-    margin-top: 0;
-}
+p { margin-top: 0;}
 
 .description a:link {
     background-color: #007eb3;
@@ -102,12 +94,8 @@ p {
     max-width:fit-content;
     padding: 5px 15px;
 }
-.rouge {
-    color: #F00;
-}
-.ocre {
-    color:#CD8C56
-}
+.rouge { color: #F00;}
+.ocre { color:#CD8C56;}
 
 .saison {
     border: 1px solid #ccc;
@@ -126,8 +114,7 @@ p {
     padding-left: 15px;
 }
 
-.saison tbody tr:nth-child(odd) {
-    background-color: #ccccccb9;
+.saison tbody tr:nth-child(odd) { background-color: #ccccccb9;
 }
 
 .aPropos {
@@ -175,6 +162,8 @@ p {
     content: "\f095";
     padding-right: 5px;
 }
+
+.titreContact{margin-bottom:20px;}
 
 .formulaire {
     display: flex;
@@ -249,6 +238,7 @@ p {
     font-size: 2em;
     padding-bottom: 20px;
 }
+
 .fa-square-facebook {color:#4267B2;}
 .fa-square-twitter {color: #1da1f2;}
 .fa-square-pinterest {color: #bd081c;}
@@ -264,10 +254,17 @@ footer{
     text-align: center;
 }
 
-footer p {
-    color: #fff;
-}
+footer p { color: #fff;}
 
 footer a:link {
-    color: #fff;
+    text-decoration: underline;
+    color: #fff
+}
+footer a:hover {
+    text-decoration: underline;
+    color: #fff
+}
+footer a:visited {
+    text-decoration: underline;
+    color: #fff
 }
